@@ -1,3 +1,10 @@
+2007-02-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* gnome-about-me.c: (about_me_image_clicked_cb): change default dir for
+	the image chooser to $datadir/pixmaps/faces (same as gdm) and add a
+	bookmark for ~/Pictures if available (fixes bug #408305)
+
 2007-02-11  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me.c: (about_me_focus_out): fix possible crash
